# openstack-ansible-os_masakari

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  Vagrantfile  bindep.txt  run_tests.sh  setup.cfg  setup.py  tox.ini
defaults/: main.yml
doc/source/: conf.py  configure-masakari.rst  index.rst
examples/: masakari_secrets.yml  playbook.yml
examples/env.d/: masakari.yml
handlers/: main.yml
meta/: main.yml  openstack-ansible.yml
releasenotes/source/: conf.py  index.rst
tasks/: main.yml  masakari_db_setup.yml  masakari_db_sync.yml  masakari_init_common.yml  masakari_init_systemd.yml  masakari_install.yml  masakari_post_install.yml  masakari_pre_install.yml  masakari_service_setup.yml
templates/: masakari-systemd-init.j2  masakari-systemd-tmpfiles.j2  masakari.conf.j2  masakarimonitors.conf.j2  process_list.yaml.j2
tests/: ansible-role-requirements.yml  inventory  os_masakari-overrides.yml  test-install-masakari.yml  test-masakari-functional.yml  test.yml  tests-repo-clone.sh
tests/group_vars/: all_containers.yml
tests/host_vars/: infra1.yml  localhost.yml  masakari1.yml
vars/: debian.yml  main.yml  redhat-7.yml  redhat.yml  suse.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
